missing dot in references

--- a/diplomka.tex
+++ b/diplomka.tex
@@ -16,12 +16,11 @@
 \begin{comment}
 TODO
  - znovu projít chyby
- - znovu zkontrolovat přesahy
-
 
 Projít si: \subsection{Webové aplikace}
  
 DONE
+ - znovu zkontrolovat přesahy
  - přepsat Abstrakt
  - vyhledat " a a "
  - doplnit REFERENCE
@@ -1540,7 +1539,7 @@ Michal Hantl
 
 
 \bibitem{visitor} Dvořák, Miloš,
-\textit{Visitor Pattern}, dostupné z url \url{http://objekty.vse.cz/Objekty/Vzory-Visitor}
+\textit{Visitor Pattern}, dostupné z url \url{http://objekty.vse.cz/Objekty/Vzory-Visitor}.
 
 
 \bibitem{cookies} Jak Psát Web,
