--- a/diplomka.tex
+++ b/diplomka.tex
@@ -465,7 +465,7 @@ Událostí v prohlížeči je třeba klik na tlačítko, psaní do textového po
 
 K sběru dat na straně uživatele se používá JavaScript. Jedná se o skriptovací jazyk a kromě jména nemá nic společného s jazykem Java. Pomocí tohoto jazyka jsou v prohlížeči veškeré události zachyceny, zaznamenány a zpracovány.
 
-\subsubsection{Klání myší}
+\subsubsection{Klikání myší}
 
 Klikání myší na stránce způsobuje přechod na jinou stránku, nebo spuštění nějaké funkce. Pokud by se jednalo pouze o odkaz na jinou stránku, vystačili bychom si s analýzou logových souborů. Stránky však často obsahují aktivní prvky, které nepožadují novou stránku, ale mění pouze část stránky. 
 
